[gd_scene load_steps=3 format=3 uid="uid://ckmk782j8a58w"]

[ext_resource type="Script" uid="uid://doxc1fd17a6qt" path="res://Scripts/experimentation/notification.gd" id="1_i7ky5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bo6mk"]
content_margin_left = 32.0
content_margin_top = 32.0
content_margin_right = 32.0
content_margin_bottom = 32.0
bg_color = Color(0.377919, 0.377919, 0.377919, 1)

[node name="Notification" type="Control"]
auto_translate_mode = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i7ky5")

[node name="PanelContainer" type="PanelContainer" parent="."]
auto_translate_mode = 1
layout_mode = 0
offset_left = -258.0
offset_top = -200.0
offset_right = 258.0
offset_bottom = 626.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bo6mk")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="NotFinished" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 430)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "You haven't yet told the robot where it can find the"

[node name="OK" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 96

[node name="OK" type="Button" parent="PanelContainer/VBoxContainer/OK"]
auto_translate_mode = 1
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Okay"

[node name="AreYouFinished" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 440)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "Are you finished telling the robot about where it can find the [color=cyan]umbrella[/color] and the [color=gold]bag[/color]?"

[node name="YesNo" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 96

[node name="Yes" type="Button" parent="PanelContainer/VBoxContainer/YesNo"]
auto_translate_mode = 1
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Yes
"

[node name="No" type="Button" parent="PanelContainer/VBoxContainer/YesNo"]
auto_translate_mode = 1
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "No"
